--- a/doc/archCons.tex
+++ b/doc/archCons.tex
@@ -13,7 +13,7 @@ An example of a constraint is the \class{Linear} constraint, which is the same a
 programming, equation \ref{equat_linear} is an example of a \class{Linear} constraint. 
 \begin{equation}
  c_1: \; 2x_1 + 2x_2 \leq 2  \qquad x_1,x_2 \in \{0,1\}
-\end{equation} \label{equat_linear}
+\end{equation} \label{equat_linear} \noindent
 A constraint is posted in the Gecode \class{Space} by \class{GecodeEngine} and later handled in the 
 \class{LocalSearchEngine}. The 
 constraints are treated differently in the environments and need different parameters and methods for that. The LS 
