--- a/doc/bpip.tex
+++ b/doc/bpip.tex
@@ -4,7 +4,7 @@ using and a linear objective function. A integer linear program (ILP) can be wri
  \text{Minimize }\; &z =  \mathbf{c}^T\mathbf{x} \\ 
  \text{subject to } \; & A\mathbf{x} \leq \mathbf{b} \\ 
  & \mathbf{x} \in \mathbb{Z}^n
-\end{align}
+\end{align} \noindent
 Here $A$ is a $n \times m$ matrix of coefficients, $\mathbf{b} \in \mathbb{R}^m$, $z$ is the value of the objective 
 function and $\mathbf{c} \in \mathbb{R}^n$. The first line is the objective function and can easily be transformed to a 
 maximization problem by multiplying by $-1$. The relation in line 2 can be a mix of $\{\leq,=,\geq\}$ but greater 
