--- a/doc/generalsolver.tex
+++ b/doc/generalsolver.tex
@@ -2,7 +2,7 @@ The \gensol class contains the most high level methods and most of them are used
 the most important methods is shown in figure \ref{fig_general}. \\ \noindent
 \begin{figure}[!b] 
 \begin{center}
-\includegraphics[width=0.8\linewidth]{general2.pdf} \caption{Important methods in GPSolver class} 
+\includegraphics[width=0.8\linewidth]{general.pdf} \caption{Important methods in GPSolver class} 
 \label{fig_general}
 \end{center} 
 \end{figure} 
