--- a/doc/main.bib
+++ b/doc/main.bib
@@ -65,7 +65,12 @@ arthor= {Gustav Bj̈ordal, Jean-No ̈el Monette, Pierre Flener,Justin Pearson},
  title = {A constraint-based local search backend for MiniZinc},
  year= {2015},
  Publisher = {Springer, Business Media New York}
- 
+}
+@Misc{oscar2,
+  author = "{OscaR Team}",
+  title = "{O}sca{R}: {S}cala in {O}{R}",
+  year = {2012},
+  note = {Available from \texttt{https://bitbucket.org/oscarlib/oscar}},
 }
 @incollection{CPbog,
   author={},
