--- a/doc/modelsol.tex
+++ b/doc/modelsol.tex
@@ -20,7 +20,7 @@ Activity No. & Cost & Score & Week 1 & Week 2 & Week 3 \\ \hline
 \end{tabular}
 \caption{Suggested activities}
 \label{tab_activity}
-\end{table}
+\end{table} \noindent
 If an activity is chosen it is chosen for all the weeks with yes. \\ 
 \boste{Section - Model}
 Each of the activities can be represented by a binary variable whether the activity is chosen or not. The constraint of 
