--- a/doc/ddg.tex
+++ b/doc/ddg.tex
@@ -1,12 +1,11 @@
-For each constraint not transformed to a oneway constraint auxiliary variables are introduced as invariants and an 
-invariant for violation is created. The are created by calling the method \method{createInvariants} of each constraint. 
-The algorithm for \class{Linear} was shown in subsection \ref{sub_cons}. These invariants are used to speed up local 
-search, that is described in section \ref{sec_local}. \boste{Are they?} \\
+For each constraint, not transformed into a oneway constraint, auxiliary variables are introduced as invariants and an 
+invariant for violation degree is created. The are created by calling the method \method{createInvariants} of each 
+constraint and the algorithm for \class{Linear} was shown in subsection \ref{sub_cons}. \\
 The dependency directed graph (\emph{DDG}) $G=(V,A)$ is made of a set of vertices $V$ representing all independent 
 variables and all invariants. To ease the notation we say the value of vertex $v \in V$ is the value of the variable or 
 invariant it represents. \\
-The vertex $v \in V$ has an outgoing arc to vertex $u \in V$ if and only if the value of $u$ is directly dependent on 
-the value of $v$. The vertices representing independent variables never have an ingoing arc. \\ 
+The vertex $v \in V$ has an outgoing arc $vu \in A$ to vertex $u \in V$ if and only if the value of $u$ is directly 
+dependent on the value of $v$. The vertices representing independent variables never have an ingoing arc. \\ 
 The graph can be illustrated with all the variable vertices to the left with outgoing arcs going right to vertices 
 representing invariants. \\  
 If a variable is defined by a oneway constraint the variable vertex is removed from $G$ since the value of that 
@@ -16,7 +15,8 @@ variable is given by the invariant representing it. \\
 %The variables are non-fixed and non-defined and only have outgoing arcs. 
 %Variables and invariants has an outgoing arc to the invariants that 
 %depends on their value. \\ 
-The DDG is used to update values of variables and invariants during local search. The graph $G$ is also used to build 
+The DDG is used when doing local search and contains dependencies of variables and invariants. The 
+graph $G$ is also used to build 
 the propagation queues described in subsection \ref{sec_propaqueue}. The idea of a graph representing the relationship 
 between invariants comes from Comet \cite[p. 97]{comet} and OscaR\cite[p. 7-9]{oscar}. \\
 To illustrate how the DDG is made an example of a model with three variables and a two constraint will 
@@ -29,8 +29,9 @@ $ c_2: $&$2x_2 + x_3 $&$\leq 2$ \\
 \end{center}
 The variable $x_3$ can be defined as an invariant $y_1$ by transforming $c_1$ to a oneway constraint $c_1': x_3 = 
 x_1+x_2-1$. Once variable $x_3$ is defined by a oneway constraint $x_3$ are removed from the graph and replaced by 
-invariant $y_1$. The variables $x_1$ and $x_2$ defines $y_1$ hence they have outgoing arcs to $y_1$. 
-\begin{figure}[b]
+invariant $y_1$. The variables $x_1$ and $x_2$ defines $y_1$ hence they have outgoing arcs to $y_1$. This is 
+illustrated in figure \ref{fig_smallG} 
+\begin{figure}[t]
 \begin{center}
     \begin{tikzpicture}[scale=1]
         \vertex[label=$x_1$](x1) at (0,2) {};
@@ -53,8 +54,8 @@ invariant $y_1$. The variables $x_1$ and $x_2$ defines $y_1$ hence they have out
 Auxiliary variable can be useful to update constraint violations and in this example we could create an auxiliary 
 variable where value is the sum of the left hand side of $c_2$. The auxiliary variable will be represented 
 by a \class{Sum} invariant $y_2$ which will be added to $G$. The invariant $y_1$, representing $x_3$, and variable 
-$x_2$ have an outgoing arc to $y_2$ that has an outgoing arc to $c_2$. A \class{LEQViolation} invariant $y_3$ 
-representing the violation of constraint $c_2$ is added as well.
+$x_2$ have an outgoing arc to $y_2$. A \class{LEQViolation} invariant $y_3$ representing the violation of constraint 
+$c_2$ is added as well.
 \begin{figure}[b]
 \begin{center}
     \begin{tikzpicture}[scale=1]
@@ -74,8 +75,7 @@ representing the violation of constraint $c_2$ is added as well.
     \captionof{figure}{Small example of DDG continued}
     \label{fig_smallG2}
 \end{center}
-\end{figure}   \label{fig_smallG2}
-Invariant $y_1$ has an outgoing arc to $y_2$ since Variable $x_3$ participates in $c_2$. \\
+\end{figure}
 When changing the value of $x_2$ both invariants need to be updated since they are dependent on the value of $x_2$. 
 Invariant $y_2$ is dependent on the value of $y_1$ therefore to avoid updating $y_2$ twice, it is beneficial to 
 update $y_1$ before updating $y_2$. This is the ordering given the propagation queue that is discussed in the next 
@@ -93,28 +93,29 @@ In order to remove circular definitions, all strongly connected components of si
 $(u,v) \in V^{SCC}$ there exist both a path from $u$ to $v$ and a path from $v$ to $u$ \cite[p. 1170]{cormen}. 
 Each of these strongly connected components must be broken in order to keep $G$ acyclic, since a SCC consist of at 
 least one cycle. A SCC can be broken by removing arcs and/or removing vertices. The arcs $A$ represent relations 
-between variables, invariants and constraints and should not be changed. The vertices $V^{SCC}$ can only be vertices 
-representing invariant since variable only have outgoing arcs and constraint only have ingoing arcs. Undefining one of 
-those invariants corresponds to removing one of the vertices, hence breaking the SCC. An invariant can be undefined by 
-reintroducing the variable it represents and removing the invariant from the model. The oneway constraint used to 
-define the invariant is transformed back into a functional constraint again and is reintroduced in the model. \\
+between variables, invariants and constraints and should not be changed. The set of vertices $V^{SCC}$, in a SCC, can 
+only be vertices representing invariant since variable only have outgoing arcs and constraint only have ingoing arcs. 
+Undefining one of those invariants corresponds to removing one of the vertices, hence breaking the SCC. An invariant can 
+be undefined by reintroducing the variable it represents and removing the invariant from the model. The oneway 
+constraint used to define the invariant is transformed back into a functional constraint again and is reintroduced in 
+the model. \\
 For each SCC one of the vertices is chosen and the invariant it represents is undefined. The invariant is chosen in the 
 order of lowest domain then highest arity of oneway constraint defining it. If there is ties they are broken at random.
 \\  
 To find all SCC of size two or more Tarjan's algorithm for finding strongly connected components is used. \boste{cite 
-SIAM J. Comput., 1(2), 146–160.}. Tarjan's algorithm has a depth first search behavior when exploring vertices and uses 
-a stack when exploring. The stack consist of vertices that has been visited before but not part of a strongly 
-connected component yet. The use two counters, first one index is unique in the order they are visited the other is 
-lowlink initially the same as index. If we go from vertex $v$ to vertex $u$ and $u$, $v.lowlink = 
-min(v.index,u.lowlink$. When a vertex does not point to any more vertices if its index is equal to it lowlink it pops 
-the stack until it reaches it self. All the vertices popped from the stack is in a strongly connected component. \\
-The algorithm has been modified to give each variable a time stamp when they are popped from the stack aswell. That 
+SIAM J. Comput., 1(2), 146–160.}. Tarjan's algorithm has a recursive depth first search behavior when exploring 
+vertices and uses a stack when exploring. The stack consist of vertices that has been visited before but not part of a 
+strongly connected component yet. The use two counters, first one $index$ is unique in the order they are visited the 
+other is $lowlink$ initially the same as $index$. If we go from vertex $v$ to vertex $u$ and $u$ has been visited 
+before, $v.lowlink = min(v.index,u.lowlink$. If $u$ has not been visited the search continues from $u$. When all 
+neighbors of a vertex $v$ has been explored if $v.index$ is equal to its $v.lowlink$ the stack is popped until $v$ is 
+popped. All the vertices $V^{SCC}$ popped from the stack is a strongly connected component. \\
+The algorithm has been modified to give each variable a time stamp when they are popped from the stack as well. That 
 time stamp gives an ordering of the invariants used to create the propagation queues described in the next subsection. 
-The time stamp is updated each time the algorithm is repeated, when cycles are found. \\
+The time stamp is updated each time the algorithm is restarted. \\
 Removing the fewest possible invariants such that there are no cycles in $G$ corresponds to solving the minimum 
 feedback arc set problem and is known to be NP-hard \cite[p.9]{oscar}. In order to reduce the construction time a 
-greedy approach is chosen. \\ 
-
+greedy approach is chosen. \\
 Once these strongly connected components are broken there is still no guarantee that $G$ is a directed acyclic graph 
 (DAG). A strongly connected component can be made of several cycles and it might not be sufficient just to break all 
 SCC found by Tarjans algorithm initially. The process of finding SCC with Tarjans algorithm and then 
@@ -122,10 +123,10 @@ breaking these strongly connected components is repeated until no strongly conne
 is found by Tarjans algorithm. \medskip \\  
 The only vertices that can make strongly connected components are the vertices representing invariants, more 
 specifically only the invariants that define a variable. Therefore the check for strongly connected components are done 
-before other invariants are added. \\ 
+before other invariants are added. After they are added Tarjans algorithm is repeated to give all invariants a 
+time stamp. \\ 
 The first tiebreaker in algorithm \ref{algo_makeoneway} is used as a heuristic to reduce the number of cycles 
-generated. If invariants are not used to define other invariants no cycles can occur, since cycles can only be made of 
-invariant vertices. \\
+generated.  \\
 
 
 
